add-bootstrap css change

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,17 @@
 <div class="row">
-  <div class="col-md-3"></div>
+<div class="col-md-4">
+
+
+</div>
+<div class="col-md-4">
+  <button class="btn btn-success custom-button" name="button1id" routerLink="/login">Login</button>
+  <button class="btn btn-success custom-button" name="button2id" routerLink="/registration">Registration</button>
+  <button class="btn btn-success custom-button" name="button3id" routerLink="/userupdate">Update User</button>
+</div>
+</div>
+<div class="row">
+  <div class="col-md-3">
+  </div>
   <div class="col-md-6">
     <router-outlet></router-outlet>
   </div>
