--- a/src/app/components/registration/resistration.component.html
+++ b/src/app/components/registration/resistration.component.html
@@ -48,7 +48,7 @@
     <div class="form-group">
       <label class="col-md-4 control-label"></label>
       <div class="col-md-4">
-        <button (click)="submit()" name="submit" class="btn btn-primary">Submit</button>
+        <button (click)="submit()" name="submit" class="btn btn-primary">Sign Up</button>
       </div>
     </div>
 
